Ajustes dos Dias

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,13 @@
     <string name="nome">Alimento</string>
     <string name="descricao">Descrição Alimento</string>
     <string name="diaSemana">Dia da Semana</string>
+    <string name="segunda">Segunda</string>
+    <string name="terca">Terça</string>
+    <string name="quarta">Quarta</string>
+    <string name="quinta">Quinta</string>
+    <string name="sexta">Sexta</string>
+    <string name="todos">Sem filtro</string>
+
+
 
 </resources>
