Colocação nos dias do menu e Update Json

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="quarta">Quarta</string>
     <string name="quinta">Quinta</string>
     <string name="sexta">Sexta</string>
-    <string name="todos">Sem filtro</string>
+    <string name="todos">Todos</string>
 
 
 
